--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,16 +3,14 @@ server {
     server_name 127.0.0.1;
 
     location /static/ {
-        root /var/html/;
+        alias /var/html/static/;
     }
-
 
     location /media/ {
-        root /var/html/;
+        alias /var/html/media/;
     }
-
 
     location / {
         proxy_pass http://web:8000;
     }
-} 
+}
