--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==22.0.0
 idna==3.7
 packaging==24.1
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.0
 tzdata==2024.1
